# tsaagan

./: .gitignore  ACCEPTABLE_USE.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SOUL.md  agent.js  bench.js  daemon.js  kestrel.js  native.js  package-lock.json  package.json  run.js  server.js  tsaagan.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: METHODOLOGY.md  tasks.json
clients/python/: README.md  pyproject.toml
clients/python/kestrel_browser/: __init__.py
clients/python/tsaagan/: __init__.py
docs/: AGENT.md  API.md  ARCHITECTURE.md  BUILD_JOURNAL.md  EXTENSION.md  PROTOCOL.md  RECIPES.md  RELIABILITY.md
examples/: search-and-extract.mjs
extension/: background.js  manifest.json
lib/: api.js  brain.js  embed.js  llm.js  providers.json  reflect.js  totp.js  vault.js
mcp/: daemon-client.mjs  server.mjs  tools.mjs
protocol/: actions.schema.json  kestrel.d.ts  tsaagan.d.ts
recipes/: image-generation-web-apps.md
sdk/: index.mjs
test/: brain.test.mjs  embed.test.mjs  llm.test.mjs  mcp.test.mjs  sdk.test.mjs  smoke.test.mjs  totp.test.mjs  vault.test.mjs
tools/: ext-prove.sh
